# bevy-game-katas

./: .gitignore  Cargo.toml
assets/katas/2/: map.rendered.tmx  map.tiled-project  map.tiled-session  map.tmx  map2.tmx  tileset.xml
assets/katas/2/sprites/: coin.aseprite  tileset.aseprite
assets/katas/2/templates/: coin.tx
assets/palettes/: 5x6.pal  5x6.palettepal  7colors.pal  7colors.palettepal
assets/sprites/: backdrop.aseprite  guy.aseprite
katas/1-simple-platform/: Cargo.toml
katas/1-simple-platform/src/: game_system.rs  main.rs
katas/2-simple-tiled-platform/: Cargo.toml  tiled_types_export.json
katas/2-simple-tiled-platform/src/: game_system.rs  main.rs
katas/3-gamejam/: Cargo.toml
katas/3-gamejam/assets/maps/grayboxes/nexus_ldtk/: nexus.ldtk
katas/3-gamejam/assets/maps/grayboxes/nexus_ldtk/nexus/backups/beb65350-c210-11ef-8343-792d7defc202_2025-01-26_13-19-17/: nexus.ldtk
katas/3-gamejam/assets/maps/grayboxes/nexus_ldtk/nexus/backups/beb65350-c210-11ef-8343-792d7defc202_2025-01-26_13-21-13/: nexus.ldtk
katas/3-gamejam/assets/maps/grayboxes/nexus_ldtk/nexus/backups/beb65350-c210-11ef-8343-792d7defc202_2025-01-26_13-34-18/: nexus.ldtk
katas/3-gamejam/assets/maps/grayboxes/nexus_ldtk/nexus/backups/beb65350-c210-11ef-8343-792d7defc202_2025-01-26_13-35-10/: nexus.ldtk
katas/3-gamejam/assets/maps/grayboxes/nexus_ldtk/nexus/backups/beb65350-c210-11ef-8343-792d7defc202_2025-01-26_13-52-19/: nexus.ldtk
katas/3-gamejam/assets/maps/grayboxes/nexus_ldtk/nexus/backups/beb65350-c210-11ef-8343-792d7defc202_2025-01-26_15-17-44/: nexus.ldtk
katas/3-gamejam/assets/maps/grayboxes/nexus_ldtk/nexus/backups/beb65350-c210-11ef-8343-792d7defc202_2025-01-26_16-44-08/: nexus.ldtk
katas/3-gamejam/assets/maps/grayboxes/nexus_ldtk/nexus/backups/beb65350-c210-11ef-8343-792d7defc202_2025-01-26_16-45-22/: nexus.ldtk
katas/3-gamejam/assets/maps/grayboxes/nexus_ldtk/nexus/backups/beb65350-c210-11ef-8343-792d7defc202_2025-01-26_17-20-27/: nexus.ldtk
katas/3-gamejam/assets/maps/grayboxes/nexus_ldtk/nexus/backups/beb65350-c210-11ef-8343-792d7defc202_2025-01-26_17-23-33/: nexus.ldtk
katas/3-gamejam/assets/palettes/: general.pal  general.palettepal
katas/3-gamejam/assets/sprites/: guy.aseprite
katas/3-gamejam/assets/tilesets/: nexus-mix.aseprite
katas/3-gamejam/src/: main.rs
katas/3-gamejam/src/systems/: init_game.rs  mod.rs
katas/simple-platform/: Cargo.toml
katas/simple-platform/src/: game_system.rs  main.rs  player.rs
random_plugins/gamejam-platform-controller/: Cargo.toml
random_plugins/gamejam-platform-controller/src/: lib.rs  player_components.rs  player_const_rules.rs
random_plugins/gamejam-platform-controller/src/input_systems/: gamepad_input.rs  keyboard_input_system.rs  mod.rs
random_plugins/gamejam-platform-controller/src/player_systems/: grounded_system.rs  mod.rs  movement_dampening_system.rs  player_control_system.rs  player_spawn_system.rs
random_plugins/simple-2d-camera/: Cargo.toml
random_plugins/simple-2d-camera/src/: lib.rs
random_plugins/simple-platform-player-controller/: Cargo.toml
random_plugins/simple-platform-player-controller/src/: lib.rs  player_components.rs
random_plugins/simple-platform-player-controller/src/player_systems/: movement_dampening_system.rs
