[package]
name = "simple-platform"
version = "0.1.0"
edition = "2021"

[features]
avian-debug = []

[dependencies]
avian2d.workspace = true
bevy.workspace = true
simple-2d-camera = { path = "../../random_plugins/simple-2d-camera" }
simple-platform-player-controller = { path = "../../random_plugins/simple-platform-player-controller" }