[package]
name = "gamejam"
version = "0.1.0"
edition = "2021"


# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
avian-debug = []

[dependencies]
avian2d.workspace = true
bevy.workspace = true
bevy_asset_loader.workspace = true
bevy_asset_loader_derive.workspace = true
bevy_ecs_ldtk.workspace = true
simple-2d-camera = { path = "../../random_plugins/simple-2d-camera" }
simple-platform-player-controller = { path = "../../random_plugins/simple-platform-player-controller" }
tiled.workspace = true