[package]
name = "gamejam-platform-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
simple-2d-camera = { path = "../simple-2d-camera" }
avian2d.workspace = true
bevy.workspace = true
bevy_asset_loader = { workspace = true, features = ["2d"] }
bevy_asset_loader_derive.workspace = true
bevy_ecs_ldtk.workspace = true
bevy_trauma_shake.workspace = true